Stop Avg for all wrapping on mobile

--- a/src/components/Dumbbell/Dumbbell.scss
+++ b/src/components/Dumbbell/Dumbbell.scss
@@ -142,6 +142,7 @@
   -webkit-transform: translateX(-50%) translateY(120%);
   transform: translateX(-50%) translateY(120%);
   // max-width: 60px;
+  white-space: nowrap;
   font-weight: bold;
   text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255),
     -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
